# mountain-race

./: .devcontainer.json  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.devcontainer  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/gear-crawler/: SKILL.md
.github/workflows/: ci.yml
backend/: go.mod  go.sum  main.go
backend/api/: equipment.go  export.go  images.go  register.go  routes.go  weather.go
backend/camptocamp/: client.go  detail.go  detail_test.go  search.go  search_test.go
backend/llm/: equipment.go  equipment_test.go  gemini.go  ollama.go  openai.go  prompts.go  provider.go
backend/meteo/: avalanche.go  forecast.go  forecast_test.go  geo.go  geo_test.go  token.go
backend/pdf/: export.go
backend/schedule/: naismith.go  naismith_test.go
backend/static/: __next.__PAGE__.txt  __next._head.txt  __next._tree.txt  index.html  index.txt
backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html
data/: Modelfile  equipment.py  evaluate.py  gear_dataset.jsonl  gear_dataset_original.jsonl  gear_loader.py  gear_preparing.ipynb  gear_testing.ipynb  gear_testing_local.ipynb  gear_training.ipynb
frontend/: jest.config.ts  next.config.ts  package-lock.json  package.json
frontend/messages/: en.json  fr.json
frontend/src/lib/: i18n.ts  (+1 more)
planning/: llm-equipment-extraction.md  plan.md
test/: docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
test/specs/: app.spec.ts
(+31 files in other folders)
