[project]
name = "gear-training"
version = "0.1.0"
requires-python = ">=3.13.5"
dependencies = [
    "datasets==3.6.0",
    "ipykernel",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "litellm>=1.77.5",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "modal>=1.1.4",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "torch>=2.8.0",
    "peft",
    "bitsandbytes",
    "trl"
]
